<resources>
    <string name="app_name">help UP</string>
    <string name="activity_login">Fazer login</string>
    <string name="activity_register">Criar uma conta gratuita</string>
    <string name="activity_profile">Perfil</string>
    <string name="activity_substancias">Cadastro de Alergênicos</string>
    <string name="activity_recuperar_senha">Recuperar Senha</string>
    <string name="activity_settings">Configurações</string>
    <string name="title_activity_register_produto"></string>
    <string name="title_activity_view_produto">Cadastro de Alergênicos</string>
    <string name="title_activity_categorias">Categoria</string>
    <string name="title_atualizar_alergenicos">Atualizar alergênicos</string>
    <string name="title_atualizar_nome">Atualizar nome</string>
    <string name="btn_sign_in">ENTRAR</string>
    <string name="btn_save">SALVAR</string>
    <string name="btn_cadastrar">CADASTRAR</string>
    <string name="btn_pular">PULAR</string>
    <string name="btn_entre_com_google">ENTRAR COM GOOGLE</string>
    <string name="btn_cadastrar_com_google">CADASTRAR-SE COM GOOGLE</string>
    <string name="btn_login">FAZER LOGIN</string>
    <string name="btn_cadastrar_se">CADASTRAR-SE</string>
    <string name="btn_enviar">ENVIAR</string>
    <string name="btn_proximo">PRÓXIMO</string>
    <string name="btn_cancelar">CANCELAR</string>
    <string name="action_search">Pesquisar</string>
    <string name="action_profile">Perfil</string>
    <string name="action_logout">Sair</string>
    <string name="action_settings">Configurações</string>
    <string name="menu_drawer_inicio">Início</string>
    <string name="menu_drawer_categoria">Categorias</string>
    <string name="menu_drawer_favorito">Favoritos</string>
    <string name="menu_drawer_cartilha">Cartilha</string>
    <string name="menu_drawer_perfil">Perfil</string>
    <string name="menu_adicionar_produto">Adicionar Produto</string>
    <string name="menu_drawer_configuracoes">Configurações</string>
    <string name="menu_boottom_sheet_camera">Camera</string>
    <string name="menu_boottom_sheet_galeria">Galeria</string>
    <string name="aguarde">Aguarde</string>
    <string name="realizando_cadastro">Realizando Cadastro</string>
    <string name="realizando_login">Realizando Login</string>
    <string name="msg_checando_email">Checando email</string>
    <string name="msg_enviar_email">Email enviado...</string>
    <string name="msg_email_nao_cadastrado">Esse endereço de email, não foi cadastado.</string>
    <string name="msg_salvando_produto">Salvando Produto</string>
    <string name="msg_salvando_alergenicos">Salvando Alergênicos</string>
    <string name="msg_produto_salvo">Produto salvo com sucesso</string>
    <string name="msg_imagem_null">Ops.. Erro ao recuperar imagem, tente novamente.</string>
    <string name="msg_nao">Não</string>
    <string name="msg_sim">SIM</string>
    <string name="msg_atencao">Atenção</string>
    <string name="msg_produto_não_encontrado">Produto não encontrado</string>
    <string name="msg_produto_não_cadastrado">Gostaria de cadastra esse produto?</string>
    <string name="msg_produto_ja_existe">Produto já existe</string>
    <string name="msg_produto_ja_possui_um_cadastro">Esse produto já possui um cadastro. Gostaria de ver?</string>
    <string name="msg_remove">Deseja remover esse produto?</string>
    <string name="msg_remove_sucesso">Removido com sucesso!</string>
    <string name="msg_update">Atualizando</string>
    <string name="msg_compartilhar">Compartilhar</string>
    <string name="substancia_avela">AVELÃ</string>
    <string name="substancia_amendoas">AMÊNDOAS</string>
    <string name="substancia_amendorim">AMENDOIM</string>
    <string name="substancia_castanha_de_caju">CASTANHA DE CAJU</string>
    <string name="substancia_castanha_de_para">CASTANHA DO PARÁ</string>
    <string name="substancia_cevada">CEVADA</string>
    <string name="substancia_crustaceos">CRUSTÁCEOS OU FRUTOS DO MAR</string>
    <string name="substancia_gluten">GLÚTEN</string>
    <string name="substancia_leite">LEITE</string>
    <string name="substancia_macadamia">MACADÂMIA</string>
    <string name="substancia_nozes">NOZES</string>
    <string name="substancia_ovo">OVO</string>
    <string name="substancia_peixe">PEIXE</string>
    <string name="substancia_pistache">PISTACHE</string>
    <string name="substancia_soja">SOJA</string>
    <string name="substancia_trigo">TRIGO</string>
    <string name="const_contem">Contem</string>
    <string name="const_nao_contem">Não contem</string>
    <string name="const_contem_tracas">Contem traças</string>
    <string name="text_cadastre_se">NÃO POSSUI UMA CONTA? CADASTRE-SE</string>
    <string name="text_entre">Já possui uma conta? Entre</string>
    <string name="text_subastancia_check_in">MARQUE OS ALÉRGENOS QUE VOCÊ NÃO PODE CONCUMIR.</string>
    <string name="text_esqueceu_senha">Esqueceu sua senha?</string>
    <string name="text_nome">Nome</string>
    <string name="text_email">E-mail</string>
    <string name="text_senha">Senha</string>
    <string name="text_sing_senha">Senha</string>
    <string name="text_ou">ou</string>
    <string name="text_recuperar_senha">Digite seu e-mail abaixo e enviaremos as instruções para redefinir a sua senha.</string>
    <string name="text_termo_uso">Termos de uso</string>
    <string name="text_politica_privatizacao">Política de privacidade</string>
    <string name="text_fabricante">Marca</string>
    <string name="text_digite_nome_fabricante">Digite o nome do fabricante do produto</string>
    <string name="text_selecione_item">Selecione um item</string>
    <string name="text_codigo_barra">Código de barra</string>
    <string name="text_categoria">Categoria</string>
    <string name="text_detalhes_perfil">DETALHES PERFIL</string>
    <string name="text_alergenicos">ALERGÊNICOS</string>
    <string name="error_field_required">Este campo é obrigatório</string>
    <string name="error_invalid_email">Este endereço de e-mail é inválido</string>
    <string name="error_invalid_password">Esta senha é muito curta</string>
    <string name="error_login_invalid">Email e senha inválido</string>
    <string name="error_email_ja_cadastrado">Seu e-mail já está cadastrado. Use o botão "JÁ POSSUI UMA CONTA? ENTRE" abaixo.</string>
    <string name="error_image_not_null">O produto precisa conter uma imagem</string>
    <string name="title_canteen_intro1" translatable="false">Menus right on your screen</string>
    <string name="title_canteen_intro2" translatable="false">Cash on delivery</string>
    <string name="title_canteen_intro3" translatable="false">Choose what you like</string>
    <string name="title_canteen_intro4" translatable="false">Teste</string>
    <string name="description_canteen_intro1" translatable="false">Você encontra dificuldade para ler o rótulo dos produtos?</string>
    <string name="description_canteen_intro2" translatable="false">Possui alergia a alguma substância, ou simplismente quer levar uma vida mais saúdavel sabendo o que consome?</string>
    <string name="description_canteen_intro3" translatable="false">Apresentamos a você o help UP, uma plataforma colaborativa para compartilhamento de informações de produtos alimentícios industrializado no Brasil..</string>
    <string name="description_canteen_intro4" translatable="false">Com o help UP, você poderá consultar substâncias dos produtos, cadastra-los e muito mais. Entre nessa comunidade e faça com que o help UP possa ajudar muito mais pessoas! A sua colaboração é muito bem vinda! :D</string>
    <string name="label_button_cta_canteen_intro" translatable="false">Get started</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="setting_register_produto">Adicionar produto</string>
    <string name="setting_suporte">Contato suporte</string>
    <string name="setting_versao">Versão</string>
    <string name="setting_numero_versao">Numero da versão</string>
    <string name="setting_termos_uso">Termos de uso</string>
    <string name="setting_politica_privacidade">Politica de privacidade</string>
    <string name="setting_redes_sociais">Redes sociais</string>
    <string name="setting_facebook">Curta UP2apps no Facebook</string>
    <string name="setting_twitter">Siga @UP2apps no Twitter</string>
    <string name="setting_ajude_comunidade">Ajude a comunidade</string>
    <string name="setting_convide_amigos">Convide amigos</string>
    <string name="setting_avaliar">Avaliar o help UP</string>
    <string name="settin_sair">Sair</string>
    <string name="categoria_selecione_item">Selecione um item</string>
    <string name="categoria_bebidas">Bebidas</string>
    <string name="categoria_biscoitos">Biscoitos</string>
    <string name="categoria_bolos">Bolos</string>
    <string name="categoria_achocolatado">Achocolatados</string>
    <string name="categoria_congelados">Congelados</string>
    <string name="categoria_doces_sobremesas">Doces e sobremesas</string>
    <string name="categoria_enlatados">Enlatados</string>
    <string name="categoria_graos_cereais">Grãos e cereais</string>
    <string name="categoria_iogute">Iogurte</string>
    <string name="categoria_leite">Leite</string>
    <string name="categoria_massa">Massas</string>
    <string name="categoria_paes">Pães</string>
    <string name="categoria_queijo_frios">Queijo e frios</string>
    <string name="categoria_salgadinhos">Salgadinhos(Snacks)</string>
    <string name="categoria_outros">Outros</string>
    <string name="fabrica_a_saborosa">A Saborosa</string>
    <string name="fabrica_a_tal_da_castanha">A Tal da Castanha</string>
    <string name="fabrica_a_vaca_que_ri">A Vaca Que Ri</string>
    <string name="fabrica_abbott">Abbott</string>
    <string name="fabrica_activeslim">Activeslim</string>
    <string name="fabrica_activia">Activia</string>
    <string name="fabrica_adams">Adams</string>
    <string name="fabrica_adaptogen">Adaptogen</string>
    <string name="fabrica_ades">adeS</string>
    <string name="fabrica_adocyl">Adocyl</string>
    <string name="fabrica_adria">Adria</string>
    <string name="fabrica_advanced_nutrition">Advanced Nutrition</string>
    <string name="fabrica_agreco">Agreco</string>
    <string name="fabrica_agro_nippo">Agro Nippo</string>
    <string name="fabrica_agtal">Agtal</string>
    <string name="fabrica_aguia">Águia</string>
    <string name="fabrica_aida">AIDA</string>
    <string name="fabrica_ailiram">Ailiram</string>
</resources>