<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:minWidth="@dimen/popup_width"
    android:background="@android:color/white">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <br.com.alimentar.alergia.view.CustomEditText
            android:id="@+id/edit_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_nome"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/btn_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancelar"
            android:textColor="@color/primary"
            android:background="?attr/selectableItemBackground"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:layout_marginRight="5dp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btn_salvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_save"
            android:textColor="@color/primary"
            android:background="?attr/selectableItemBackground"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>


</LinearLayout>