<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/primary"
    tools:context="br.com.alimentar.alergia.activity.RegisterUserActivity">

    <include layout="@layout/include_toolbar" />

    <ScrollView
        android:id="@+id/login_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_sign_in_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"></com.google.android.gms.common.SignInButton>

            <RelativeLayout
                android:id="@+id/rl_ou"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:padding="5dp">

                <View
                    android:id="@+id/view_left"
                    android:layout_width="90dp"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/white" />

                <TextView
                    android:id="@+id/text_ou"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/view_left"
                    android:padding="5dp"
                    android:text="@string/text_ou"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <View
                    android:id="@+id/view_right"
                    android:layout_width="90dp"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/text_ou"
                    android:background="@android:color/white" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layout_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <br.com.alimentar.alergia.view.CustomEditText
                        android:id="@+id/edit_nome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_nome"
                        android:focusableInTouchMode="false"
                        android:inputType="text"
                        android:paddingTop="10dp"
                        android:paddingLeft="2dp"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <br.com.alimentar.alergia.view.CustomEditText
                        android:id="@+id/edit_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        android:hint="@string/text_email"
                        android:inputType="textEmailAddress"
                        android:paddingTop="10dp"
                        android:paddingLeft="2dp"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <br.com.alimentar.alergia.view.CustomEditText
                        android:id="@+id/edit_senha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_senha"
                        android:focusableInTouchMode="false"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/text_sing_senha"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/salvarBtn"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/screen_border_btn"
                    android:text="@string/btn_cadastrar"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_entrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:padding="5dp"
                    android:textSize="16sp"
                    android:text="@string/text_entre"
                    android:textAlignment="center" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv_termos_uso"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="2dp"
                        android:text="@string/text_termo_uso"/>

                    <TextView
                        android:id="@+id/tv_seta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/tv_termos_uso"
                        android:padding="2dp"
                        android:text="|" />

                    <TextView
                        android:id="@+id/tv_politica_privatizacao"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="2dp"
                        android:layout_toRightOf="@id/tv_seta"
                        android:text="@string/text_politica_privatizacao"/>

                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/iv_perfil"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@mipmap/ic_launcher"
        android:visibility="gone" />

</LinearLayout>
