<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_recuperar_senha"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/primary"
    android:orientation="vertical"
    tools:context="br.com.alimentar.alergia.activity.RecuperarSenhaActivity">

    <include layout="@layout/include_toolbar" />

    <ScrollView
        android:id="@+id/login_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="18dp">

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:textSize="15sp"
                android:text="@string/text_recuperar_senha"
                android:textAlignment="center" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white">

                <br.com.alimentar.alergia.custom.CustomEditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:hint="@string/text_email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="2dp"
                    android:paddingTop="10dp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/enviar_btn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/screen_border_btn"
                android:text="@string/btn_enviar"
                android:textColor="@color/abc_primary_text_material_dark"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
